# Zoey---Chatbot

./: .coverage  .env.example  .gitignore  CLAUDE.md  README.md  app.py  pyproject.toml  requirements.txt
.spaces/: README.md
dev-docs/: 02-project-scaffolding.md  03-system-design.md
src/zoey/: __init__.py  __main__.py  app.py
src/zoey/api/: client.py
src/zoey/core/: message.py  processor.py
tests/: conftest.py  test_client.py  test_message.py  test_processor.py
重构计划/: 02-系统设计.md  需求分析-PRD.md
